# housing-analysis

./: .gitignore  FRED_data_pull.ipynb  README.md  datasets.py  housing_analysis.ipynb  modeling.ipynb  pyproject.toml  summary.ipynb
data/: FIXHAI.csv  List_of_recessions_in_the_United_States.xlsx  MEDDAYONMARUS.csv  MSACSR.csv  NEWLISCOUUS.csv  README.md  T10Y3M.csv  ann23t_1.xlsx  census_t1_Rental_and_Homeowner_Vacancy_Rates_by_Area.xlsx  census_t2_Rental_and_Homeowner_Vacancy_Rates_by_Selected_Characteristics.xlsx  fredgraph.csv
data/FRED/: ACTLISCOUUS.csv  CSUSHPINSA.csv  HOUST.csv  MEDDAYONMARUS.csv  MORTGAGE30US.csv  MSACSR.csv  MSPUS.csv  NEWLISCOUUS.csv  T10Y3M.csv  UNRATE.csv
housing_analysis/: __init__.py  datasets.py  utils.py
notebooks/: FRED_data_pull.ipynb  housing_analysis.ipynb  modeling.ipynb
