[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "housing_analysis"
version = "0.1.0"
description = "Tools used to analyze the real estate market."
authors = [
    { name = "Jordan Barker" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["python", "housing", "economy", "data", "science"]
dependencies = [
    "ipykernel",
    "numpy",
    "pandas",
    "seaborn",
    "matplotlib", 
    "scipy", 
    "scikit-learn",
    "statsmodels",
    "openpyxl"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["housing_analysis"]